add main function and tests

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "marbles",
+  "name": "rhiz",
   "version": "1.0.0",
   "description": "automatically generate crud routes for a model constructor function",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape ./test/*.test.js | faucet",
+    "jshint": "jshint -c ./.jshintrc --exclude-path .gitignore .",
+    "coverage": "istanbul cover tape ./test/*.test.js && istanbul check-coverage --statements 95 --functions 95 --lines 95 --branches 95"
   },
   "repository": {
     "type": "git",
@@ -21,14 +23,21 @@
   "author": "William Fisher, Besart Shyti",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/foundersandcoders/marbles/issues"
+    "url": "https://github.com/foundersandcoders/rhiz/issues"
   },
-  "homepage": "https://github.com/foundersandcoders/marbles",
+  "pre-commit": [
+    "jshint",
+    "coverage"
+  ],
+  "homepage": "https://github.com/foundersandcoders/rhiz",
   "devDependencies": {
     "faucet": "0.0.1",
     "istanbul": "^0.3.13",
     "jshint": "^2.7.0",
     "pre-commit": "^1.0.6",
     "tape": "^4.0.0"
+  },
+  "dependencies": {
+    "torf": "^1.0.6"
   }
 }
